--- a/2.html
+++ b/2.html
@@ -1,32 +1,24 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html> <html>
 <head>
-  <title> WEB </title>
-  <meta charset=”utf-8”>
-  <link rel="stylesheet" href="css/master.css">
+<title> WEB </title>
+<meta charset=”utf-8”>
+<script src="master.js"></script>
+<link rel="stylesheet" href="style.css">
 </head>
-
-<body>
-  <h1><a href="index.html">WEB</a></h1>
+<body style="background-color: white; color: black;"> <h1><a href="index.html">WEB</a></h1>
 <div id="grid">
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-<div>
-  <h2>CSS</h2>
-
-    <p>
-      Cascading Style Sheets (<a href="https://ko.wikipedia.org/wiki/CSS">CSS</a>) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
-    </p>
-</div>
-</div>
-
-
-
-
-</body>
-
+<ol>
+<li><a href="1.html">HTML</a></li> <li><a href="2.html">CSS</a></li> <li><a href="3.html">JavaScript</a></li>
+</ol>
+<div id="article">
+<input id="night_day" type="button" value="night" onclick="nightDayHandler(this)">
+<h2>CSS</h2>
+<p>
+  Cascading Style Sheets (<a href="CSS.png">CSS</a>) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+</p>
+<img
+src="CSS.png" alt="web image" width="20%">
+<p>CSS is designed to enable the separation of content and presentation, including layout, colors, and fonts.[3] This separation can improve content accessibility; provide more flexibility and control in the specification of presentation characteristics; enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity and repetition in the structural content; and enable the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.</p>
+<input type="button" value="night" onclick="nightDayHandler(this)"> </div>
+</div> </body>
 </html>
